--- a/Index.html
+++ b/Index.html
@@ -5,83 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="Public\css\style.css">
     <title>Ohmyfood</title>
 </head>
 <body>
     <header class="header">
-        <div class="main_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_pict"></a></div>
+        <div class="header_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_pict"></a></div>
     </header>
     <section class="section_1">
-        <div class="s1_1">
-            <div class="s1_1_map"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map-marker-alt" class="map_marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path></svg> <h3>Paris, Belleville</h3></div>
+        <div class="section_1_1">
+            <div class="section_1_1_map"><i class="fas fa-map-marker-alt"></i> <h3>Paris, Belleville</h3></div>
         </div>
-        <div class="s1_2">
-            <div class="s1_2_title"><h2>Réservez le menu qui vous convient</h2></div>
-            <div class="s1_2_subtitle"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p></div>
-            <div class="s1_2_button"><button class="button">Explorer nos restaurants</button></div>   
+        <div class="section_1_2">
+            <div class="section_1_2_title"><h2>Réservez le menu qui vous convient</h2></div>
+            <div class="section_1_2_subtitle"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p></div>
+            <div class="section_1_2_button"><button class="section_1_2_button_b">Explorer nos restaurants</button></div>   
         </div>
     </section>
     <section class="section_2">
-        <div class="s2_1"><h2>Fonctionnement</h2></div>
-        <div class="s2_2"> 
-            <div class="s2_2_card"><span class="s2_2_num">1</span> <span class="s2_2_icon"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="mobile-alt" class="mimi" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"></path></svg></span><span class="s2_2_text"><p>Choisissez un restaurant</p></span></div>
-            <div class="s2_2_card"><span class="s2_2_num">2</span> <span class="s2_2_icon"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="list-ul" class="mimi" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M48 48a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm448 16H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"></path></svg></span><span class="s2_2_text"><p>Composez votre menu</p></span></div>
-            <div class="s2_2_card"><span class="s2_2_num">2</span> <span class="s2_2_icon"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="store" class="mimi" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 616 512"><path fill="currentColor" d="M602 118.6L537.1 15C531.3 5.7 521 0 510 0H106C95 0 84.7 5.7 78.9 15L14 118.6c-33.5 53.5-3.8 127.9 58.8 136.4 4.5.6 9.1.9 13.7.9 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18.1 20.1 44.3 33.1 73.8 33.1 4.7 0 9.2-.3 13.7-.9 62.8-8.4 92.6-82.8 59-136.4zM529.5 288c-10 0-19.9-1.5-29.5-3.8V384H116v-99.8c-9.6 2.2-19.5 3.8-29.5 3.8-6 0-12.1-.4-18-1.2-5.6-.8-11.1-2.1-16.4-3.6V480c0 17.7 14.3 32 32 32h448c17.7 0 32-14.3 32-32V283.2c-5.4 1.6-10.8 2.9-16.4 3.6-6.1.8-12.1 1.2-18.2 1.2z"></path></svg></span><span class="s2_2_text"><p>Composez votre menu</p></span></div>
+        <div class="section_2_1"><h2>Fonctionnement</h2></div>
+        <div class="section_2_2"> 
+            <div class="section_2_2_card"><span class="section_2_2_card_num">1</span> <span class="section_2_2_card_icon"><i class="fas fa-mobile-alt"></i></span><span class="s2_2_text"><p>Choisissez un restaurant</p></span></div>
+            <div class="section_2_2_card"><span class="section_2_2_card_num">2</span> <span class="section_2_2_card_icon"><i class="fas fa-list-ul"></i></span><span class="s2_2_text"><p>Composez votre menu</p></span></div>
+            <div class="section_2_2_card"><span class="section_2_2_card_num">2</span> <span class="section_2_2_card_icon"><i class="fas fa-store"></i></span><span class="s2_2_text"><p>Dégustez au restaurant</p></span></div>
         </div>
     </section>
     <section class="section_3">
-        <div class="s3_1"><h2>Restaurants</h2></div>
-        <div class="s3_2">
-            <div class="s3.2_card">
-                <a href="#"> <div class="card"> 
-                                <div class="card_pict"><img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="s3_2_Pictures"></div>
-                                <div class="card_legend"> 
-                                    <div class="legend_text"><span><h3>La palette du gout</h3></span><span><p>Ménilmontant</p></span></div>
-                                    <div class="legend_heart"><svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="card_icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg></div>
+        <div class="section_3_1"><h2>Restaurants</h2></div>
+        <div class="section_3_2">
+            <div class="section_3_2_cards">
+                <a href="#"> <div class="section_3_2_cards_1"> 
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
+                                <div class="section_3_2_cards_1_legend"> 
+                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La palette du gout</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Ménilmontant</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></div>
                                 </div>
                             </div>
                 </a>
             </div>
-            <div class="s3.2_card">
-                <a href="#"> <div class="card"> 
-                                <div class="card_pict"><img src="Maquettes Ohmyfood\images\restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" Photo Restaurant" class="s3_2_Pictures"></div>
-                                <div class="card_legend"> 
-                                    <div class="legend_text"><span><h3>La note enchantée</h3></span><span><p>Charonne</p></span></div>
-                                    <div class="legend_heart"><svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="card_icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg></div>
+            <div class="section_3_2_cards">
+                <a href="#"> <div class="section_3_2_cards_1"> 
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
+                                <div class="section_3_2_cards_1_legend"> 
+                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La note enchantée</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Charonne</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></div>
                                 </div>
                             </div>
                 </a>
             </div>
-            <div class="s3.2_card">
-                <a href="#"> <div class="card"> 
-                                <div class="card_pict"><img src="Maquettes Ohmyfood\images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" Photo Restaurant" class="s3_2_Pictures"></div>
-                                <div class="card_legend"> 
-                                    <div class="legend_text"><span><h3>A la Francaise</h3></span><span><p>Cité Rouge</p></span></div>
-                                    <div class="legend_heart"><svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="card_icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg></div>
+            <div class="section_3_2_cards">
+                <a href="#"> <div class="section_3_2_cards_1"> 
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
+                                <div class="section_3_2_cards_1_legend"> 
+                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>A la Francaise</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Cité Rouge</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></div>
                                 </div>
                             </div>
                 </a>
             </div>
-            <div class="s3.2_card">
-                <a href="#"> <div class="card"> 
-                                <div class="card_pict"><img src="Maquettes Ohmyfood\images\restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="s3_2_Pictures"></div>
-                                <div class="card_legend"> 
-                                    <div class="legend_text"><span><h3>Le délice des sens</h3></span><span><p>Folie-Méricourt</p></span></div>
-                                    <div class="legend_heart"><svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="card_icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg></div>
+            <div class="section_3_2_cards">
+                <a href="#"> <div class="section_3_2_cards_1"> 
+                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
+                                <div class="section_3_2_cards_1_legend"> 
+                                    <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>Le délice des sens</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Folie-Méricourt</p></span></div>
+                                    <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></div>
                                 </div>
                             </div>
                 </a>
             </div>
         </div>
     </section>
-    <footer class="foot1">
-        <div class="logo_f"><img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="logo_f"></div>
-        <div class="list_f"><ul>
-                                <li><span class="li_icon"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="utensils" class="icon_f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 416 512"><path fill="currentColor" d="M207.9 15.2c.8 4.7 16.1 94.5 16.1 128.8 0 52.3-27.8 89.6-68.9 104.6L168 486.7c.7 13.7-10.2 25.3-24 25.3H80c-13.7 0-24.7-11.5-24-25.3l12.9-238.1C27.7 233.6 0 196.2 0 144 0 109.6 15.3 19.9 16.1 15.2 19.3-5.1 61.4-5.4 64 16.3v141.2c1.3 3.4 15.1 3.2 16 0 1.4-25.3 7.9-139.2 8-141.8 3.3-20.8 44.7-20.8 47.9 0 .2 2.7 6.6 116.5 8 141.8.9 3.2 14.8 3.4 16 0V16.3c2.6-21.6 44.8-21.4 48-1.1zm119.2 285.7l-15 185.1c-1.2 14 9.9 26 23.9 26h56c13.3 0 24-10.7 24-24V24c0-13.2-10.7-24-24-24-82.5 0-221.4 178.5-64.9 300.9z"></path></svg></span> <span class="li_text_i"><p>Proposer un restaurant</p></span></li>
-                                <li><span class="li_icon"><svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="handshake" class="icon_f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M519.2 127.9l-47.6-47.6A56.252 56.252 0 0 0 432 64H205.2c-14.8 0-29.1 5.9-39.6 16.3L118 127.9H0v255.7h64c17.6 0 31.8-14.2 31.9-31.7h9.1l84.6 76.4c30.9 25.1 73.8 25.7 105.6 3.8 12.5 10.8 26 15.9 41.1 15.9 18.2 0 35.3-7.4 48.8-24 22.1 8.7 48.2 2.6 64-16.8l26.2-32.3c5.6-6.9 9.1-14.8 10.9-23h57.9c.1 17.5 14.4 31.7 31.9 31.7h64V127.9H519.2zM48 351.6c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16c0 8.9-7.2 16-16 16zm390-6.9l-26.1 32.2c-2.8 3.4-7.8 4-11.3 1.2l-23.9-19.4-30 36.5c-6 7.3-15 4.8-18 2.4l-36.8-31.5-15.6 19.2c-13.9 17.1-39.2 19.7-55.3 6.6l-97.3-88H96V175.8h41.9l61.7-61.6c2-.8 3.7-1.5 5.7-2.3H262l-38.7 35.5c-29.4 26.9-31.1 72.3-4.4 101.3 14.8 16.2 61.2 41.2 101.5 4.4l8.2-7.5 108.2 87.8c3.4 2.8 3.9 7.9 1.2 11.3zm106-40.8h-69.2c-2.3-2.8-4.9-5.4-7.7-7.7l-102.7-83.4 12.5-11.4c6.5-6 7-16.1 1-22.6L367 167.1c-6-6.5-16.1-6.9-22.6-1l-55.2 50.6c-9.5 8.7-25.7 9.4-34.6 0-9.3-9.9-8.5-25.1 1.2-33.9l65.6-60.1c7.4-6.8 17-10.5 27-10.5l83.7-.2c2.1 0 4.1.8 5.5 2.3l61.7 61.6H544v128zm48 47.7c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16c0 8.9-7.2 16-16 16z"></path></svg></span> <span class="li_text_i"><p>Devenir partenaire</p></span></li>
-                                <li> <span class="li_text"><p>Mentions légales</p></span></li>
-                                <li> <span class="li_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
+    <footer class="foot">
+        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_list"><ul>
+                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
+                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
+                                <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
+                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
 
         </ul></div>
     </footer>
