--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public\css\style.css">
     <title>Ohmyfood</title>
 </head>
@@ -28,7 +30,7 @@
         <div class="section_2_2"> 
             <div class="section_2_2_card"><span class="section_2_2_card_num">1</span> <span class="section_2_2_card_icon"><i class="fas fa-mobile-alt"></i></span><span class="s2_2_text"><p>Choisissez un restaurant</p></span></div>
             <div class="section_2_2_card"><span class="section_2_2_card_num">2</span> <span class="section_2_2_card_icon"><i class="fas fa-list-ul"></i></span><span class="s2_2_text"><p>Composez votre menu</p></span></div>
-            <div class="section_2_2_card"><span class="section_2_2_card_num">2</span> <span class="section_2_2_card_icon"><i class="fas fa-store"></i></span><span class="s2_2_text"><p>Dégustez au restaurant</p></span></div>
+            <div class="section_2_2_card"><span class="section_2_2_card_num">3</span> <span class="section_2_2_card_icon"><i class="fas fa-store"></i></span><span class="s2_2_text"><p>Dégustez au restaurant</p></span></div>
         </div>
     </section>
     <section class="section_3">
@@ -77,7 +79,7 @@
         </div>
     </section>
     <footer class="foot">
-        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
         <div class="foot_list"><ul>
                                 <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
                                 <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
