--- a/Index.html
+++ b/Index.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public\css\style.css">
     <title>Ohmyfood</title>
 </head>
-<body>
+<body class="Home">
     <header class="header">
-        <div class="header_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_pict"></a></div>
+        <div class="header_logo"> <a href="#"> <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt=" logo Ohmyfood" class="header_logo_pict"></a></div>
     </header>
     <section class="section_1">
         <div class="section_1_1">
-            <div class="section_1_1_map"><i class="fas fa-map-marker-alt"></i> <h3>Paris, Belleville</h3></div>
+            <div class="section_1_1_map"><i class="fas fa-map-marker-alt"></i> <form action="" method="GET"><label for="GET-location"></label>
+                <input type="text" name="location" value="Paris, Belleville"></form></div>
         </div>
         <div class="section_1_2">
             <div class="section_1_2_title"><h2>Réservez le menu qui vous convient</h2></div>
@@ -28,13 +29,13 @@
     <section class="section_2">
         <div class="section_2_1"><h2>Fonctionnement</h2></div>
         <div class="section_2_2"> 
-            <div class="section_2_2_card"><span class="section_2_2_card_num">1</span> <span class="section_2_2_card_icon"><i class="fas fa-mobile-alt"></i></span><span class="s2_2_text"><p>Choisissez un restaurant</p></span></div>
-            <div class="section_2_2_card"><span class="section_2_2_card_num">2</span> <span class="section_2_2_card_icon"><i class="fas fa-list-ul"></i></span><span class="s2_2_text"><p>Composez votre menu</p></span></div>
-            <div class="section_2_2_card"><span class="section_2_2_card_num">3</span> <span class="section_2_2_card_icon"><i class="fas fa-store"></i></span><span class="s2_2_text"><p>Dégustez au restaurant</p></span></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">1</span> <span class="section_2_2_card_s_icon1"><i class="fas fa-mobile-alt"></i></span><span class="section_2_2_card_s_text"><p>Choisissez un restaurant</p></span></div></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">2</span> <span class="section_2_2_card_s_icon"><i class="fas fa-list-ul"></i></span><span class="section_2_2_card_s_text1"><p>Composez votre menu</p></span></div></div>
+            <div class="section_2_2_card"><div class="section_2_2_card_s"><span class="section_2_2_card_s_num">3</span> <span class="section_2_2_card_s_icon2"><i class="fas fa-store"></i></span><span class="section_2_2_card_s_text"><p>Dégustez au restaurant</p></span></div></div>
         </div>
     </section>
     <section class="section_3">
-        <div class="section_3_1"><h2>Restaurants</h2></div>
+        <div class="section_3_1"><span class="section_3_1_title"><h2>Restaurants</h2></span></div>
         <div class="section_3_2">
             <div class="section_3_2_cards">
                 <a href="#"> <div class="section_3_2_cards_1"> 
