Ohmyfood - Mobile version

--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public\css\style.css">
-    <title>A la Francaise</title>
+    <title>La Palette du Gout</title>
 </head>
 <body class="R1">
     <header class="R1-header">
             <div class="R1-header-b1">
-                <a href="Home">
+                <a href="Index.html">
                     <span class="header_cont_arrow">
                         <i class="fas fa-arrow-left">
                         </i>
@@ -30,28 +32,28 @@
     </header>
     <section class="R1-menu">
         <header class="R1-menu-header">
-            <img src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
+            <img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant Picture" class="R1-menu-header-pict">
         </header>
         <article class="R1-menu-carte">
             <div class="R1-menu-carte-title">
                 <span class="R1-menu-carte-title-text">
-                    <h1>A la Francaise</h1>
+                    <h1>La palette du gout</h1>
                 </span>
                 <span class="R1-menu-carte-title-heart">
                     <i class="far fa-heart"></i>
                 </span>
             </div>
             <div class="R1-menu-carte-choix">
-                <div class="R1-menu-carte-choix-entrée">
+                <div class="R1-menu-carte-choix-entrees">
                     <div class="R1-menu-carte-choix-entrees-title">
                         <h2>ENTREES</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tartare de poulpe acidulé</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Fricassée d'escargot</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux zests d'orange</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Au piment d'Espelette</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>25€</h3>
@@ -59,9 +61,9 @@
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Velouté de légumes d'antan</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Foie gras de canard mi-cuit</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Carottes, panais, topinambour</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et ses copeaux de truffe noire</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
@@ -69,9 +71,9 @@
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Soupe à l'oignon</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Oeuf au plat</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisitée</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>20€</h3>
@@ -80,25 +82,26 @@
 
                     </div>
                 </div>
-                <div class="R1-menu-carte-choix-entrees-title">
-                    <h2>PLATS</h2>
-                </div>
-                <div class="R1-menu-carte-choix-entrees-nom">
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
-                        <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Coquilles Saint-Jacques</h3>
-                            </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Accompagnées d'une purée de panais</p>
-                            </div>
+                <div class="R1-menu-carte-choix-entrees">
+                    <div class="R1-menu-carte-choix-entrees-title">
+                        <h2>PLATS</h2>
                         </div>
+                            <div class="R1-menu-carte-choix-entrees-nom">
+                                <div class="R1-menu-carte-choix-entrees-nom-x">
+                                    <div class="R1-menu-carte-choix-entrees-nom-x-text">
+                                        <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Filet de boeuf aux herbes</h3>
+                                        </div>
+                                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Accompagné de sa ribambelle de légumes</p>
+                                            </div>
+                                    </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>40€</h3>
                         </div>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom-x">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Magret de canard</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Parmentier de queue de boeuf</h3>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et parmentier de pommes de terre</p>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>À la truffe noire sur sa purée de panais</p>
                             </div>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
@@ -106,26 +109,27 @@
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom-x">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Filet de turbot</h3>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Sur son lit de gnocchis aux légumes</p>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux agrumes</p>
                             </div>
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>44€</h3>
                         </div>
                     </div>
 
-                </div>
-                <div class="R1-menu-carte-choix-desserts">
+                    </div>
+                 </div>
+                <div class="R1-menu-carte-choix-entrees">
                     <div class="R1-menu-carte-choix-entrees-title">
                         <h2>DESSERTS</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Pétales de violettes glacés</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Paris-Brest</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et purée de noisettes</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisité</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>18€</h3>
@@ -133,9 +137,9 @@
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Fondant au chocolat</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Macaron au chocolat d'exception</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisité</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et glace à la vanille de Madagascar</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>22€</h3>
@@ -143,9 +147,9 @@
                         </div>
                         <div class="R1-menu-carte-choix-entrees-nom-x">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Millefeuille croustillant</h3>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Mousse au chocolat</h3>
                                 </div>
-                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Myrtilles et pâte d’amande</p>
+                                <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Au piment d'Espelette et à la truffe noire</p>
                                 </div>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>23€</h3>
@@ -155,11 +159,21 @@
                     </div>
                 </div>
             </div>
-            
-
-
+            <div class="R1-menu-carte-button">
+                <button class="R1-menu-carte-button-b">Commander</button>
+            </div>
         </article>
-    </section>
+     </section>
+     <footer class="foot">
+        <div class="foot_logo"><img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x-white.svg" alt="logo Ohmyfood" class="foot_logo_ohmyfood"></div>
+        <div class="foot_list"><ul>
+                                <li><span class="foot_list_icon"><i class="fas fa-utensils"></i></span> <span class="foot_list_text"><p>Proposer un restaurant</p></span></li>
+                                <li><span class="foot_list_icon"><i class="far fa-handshake"></i></span> <span class="foot_list_text"><p>Devenir partenaire</p></span></li>
+                                <li> <span class="foot_list_text"><p>Mentions légales</p></span></li>
+                                <li> <span class="foot_list_text"><a href="mailto:contact@ohmyfood.com"><p>contact</p></a></span></li>
+
+        </ul></div>
+    </footer>
 
 
     
