--- a/Index.html
+++ b/Index.html
@@ -38,17 +38,17 @@
         <div class="section_3_1"><span class="section_3_1_title"><h2>Restaurants</h2></span></div>
         <div class="section_3_2">
             <div class="section_3_2_cards">
-                <a href="#"> <div class="section_3_2_cards_1"> 
-                                <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
+                 <div class="section_3_2_cards_1"> 
+                    <a href="La-palette-du-gout.html"><div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div></a>
                                 <div class="section_3_2_cards_1_legend"> 
                                     <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La palette du gout</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Ménilmontant</p></span></div>
                                     <div class="section_3_2_cards_1_legend_heart"><i class="far fa-heart"></i></div>
                                 </div>
                             </div>
-                </a>
+                
             </div>
             <div class="section_3_2_cards">
-                <a href="#"> <div class="section_3_2_cards_1"> 
+                <a href="La-note-enchantée.html"> <div class="section_3_2_cards_1"> 
                                 <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
                                 <div class="section_3_2_cards_1_legend"> 
                                     <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>La note enchantée</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Charonne</p></span></div>
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="section_3_2_cards">
-                <a href="#"> <div class="section_3_2_cards_1"> 
+                <a href="A-la-Francaise.html"> <div class="section_3_2_cards_1"> 
                                 <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
                                 <div class="section_3_2_cards_1_legend"> 
                                     <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>A la Francaise</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Cité Rouge</p></span></div>
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="section_3_2_cards">
-                <a href="#"> <div class="section_3_2_cards_1"> 
+                <a href="Le-délice-des-sens.html"> <div class="section_3_2_cards_1"> 
                                 <div class="section_3_2_cards_1_pict"><img src="Maquettes Ohmyfood\images\restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=" Photo Restaurant" class="section_3_2_cards_1_pict_1"></div>
                                 <div class="section_3_2_cards_1_legend"> 
                                     <div class="section_3_2_cards_1_legend_text"><span class="section_3_2_cards_1_legend_text_title"><h3>Le délice des sens</h3></span><span class="section_3_2_cards_1_legend_text_subtitle"><p>Folie-Méricourt</p></span></div>
